kf-on-prem/kustomize/overlays/default/ext-auth/istio-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
